@@ -81,10 +81,11 @@ installation process, and better platform independence. </p>
 
 <h2>Documentation</h2>
 
-The quickest way to learn how to use Gnuplot.py is to run the simple
-demonstration by typing `<tt>python demo.py</tt>', then to look at the
-<tt>demo.py</tt> file to see the commands that create the demo.  One
-of the examples is probably similar to what you want to do. </p>
+<p> The quickest way to learn how to use Gnuplot.py is to install it
+then run the simple demonstration by typing `<tt>python demo.py</tt>',
+then to look at the <tt>demo.py</tt> file to see the commands that
+create the demo.  One of the examples is probably similar to what you
+want to do. </p>
 
 <p> HTML documentation is included in the doc/ directory of the
 distribution and is also available <a
